baml_language/crates/baml_tests/snapshots/parser_statements/baml_tests__parser_statements__02_parser__let.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "let_statements"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN "// Inferred type let
    let x"
            KW_LET "let"
            WORD "x"
          EQUALS "="
          INTEGER_LITERAL "1"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            KW_LET "let"
            WORD "y"
            COLON ":"
            TYPE_EXPR "int"
              WORD "int"
          EQUALS "="
          INTEGER_LITERAL "2"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            KW_LET "let"
            WORD "z"
            COLON ":"
            TYPE_EXPR "int[]"
              WORD "int"
              L_BRACKET "["
              R_BRACKET "]"
          EQUALS "="
          ARRAY_LITERAL "[1, 2, 3]"
            L_BRACKET "["
            INTEGER_LITERAL "1"
            COMMA ","
            INTEGER_LITERAL "2"
            COMMA ","
            INTEGER_LITERAL "3"
            R_BRACKET "]"
          SEMICOLON ";"
        LET_STMT
          PATTERN
            KW_LET "let"
            WORD "point"
            COLON ":"
            TYPE_EXPR "Point"
              WORD "Point"
          EQUALS "="
          OBJECT_LITERAL
            WORD "Point"
            L_BRACE "{"
            OBJECT_FIELD "x: 1"
              WORD "x"
              COLON ":"
              INTEGER_LITERAL "1"
            COMMA ","
            OBJECT_FIELD "y: 2"
              WORD "y"
              COLON ":"
              INTEGER_LITERAL "2"
            COMMA ","
            R_BRACE "}"
          SEMICOLON ";"
        RETURN_STMT
          KW_RETURN "return"
          BINARY_EXPR
            PATH_EXPR "point.x"
              WORD "point"
              DOT "."
              WORD "x"
            PLUS "+"
            PATH_EXPR "point.y"
              WORD "point"
              DOT "."
              WORD "y"
          SEMICOLON ";"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Point"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "y"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"

=== ERRORS ===
None
